--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,7 @@ description: > # this means to ignore newlines until "baseurl:"
   my github page
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://FiveEye.github.io" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  fiveeye
 
 # Build settings
 markdown: kramdown
