--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: FiveEyes' GitHub Page
+title: Han's Notebook
 email: fiveeyes1024@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  my github page
+  Han's Notebook
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://FiveEye.github.io" # the base hostname & protocol for your site
 github_username:  fiveeye
