--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Han's Notebook
-email: fiveeyes1024@gmail.com
+email: hanzh.xu@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Han's Notebook
 baseurl: "" # the subpath of your site, e.g. /blog
