--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ email: hanzh.xu@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Han's Notebook
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://FiveEye.github.io" # the base hostname & protocol for your site
-github_username:  fiveeye
+url: "http://FiveEyes.github.io" # the base hostname & protocol for your site
+github_username:  FiveEyes
 
 # Build settings
 markdown: kramdown
