--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: Han's Notebook
 email: hanzh.xu@gmail.com
 description: Han's Notebook
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://FiveEyes.github.io" # the base hostname & protocol for your site
+url: "http://freopen.com" # the base hostname & protocol for your site
 github_username: FiveEyes
 
 # Build settings
